Fix seahorse so it doesn't crash if gpg or gpg2 don't load.

* Print out informative message when creating a gpgme context fails
 * Rework all code paths to handle such failures.

https://bugzilla.gnome.org/show_bug.cgi?id=659529